# mg23_ld52

./: Cargo.toml  README.md  index.html
.cargo/: config.toml
.github/workflows/: auto_release.yml  release_manual.yml
LDtk/: Map.ldtk
assets/: abaddon_light.kayak_font
assets/LDtk/: Map.ldtk
assets/ldtk/: Map.ldtk
assets/magelings/: Red-Mageling-Run.aseprite
assets/shaders/: outline_and_texture_material.wgsl
assets/spells_art/: Explosion+indictor.aseprite
src/: assets.rs  camera.rs  main.rs  physics.rs  ui.rs
src/combat/: mod.rs
src/input/: mod.rs
src/map/: mod.rs
src/networking/: ggrs.rs  mod.rs  rollback_systems.rs
src/player/: input.rs  mod.rs
src/spell/: mod.rs
wasm/: index.html
